--- a/frontend/src/css/base/_base.scss
+++ b/frontend/src/css/base/_base.scss
@@ -2,6 +2,11 @@
 
 /* Color */
 $COLOR: #000000;
+$main-color: lightgray;
+$sub-color: gray;
+
+/* Padding */
+$padding: 100px; // content-padding
 
 /* Media Query */
 $desktop: 768px;
