make header profile menu

--- a/frontend/src/css/base/_base.scss
+++ b/frontend/src/css/base/_base.scss
@@ -4,6 +4,7 @@
 $COLOR: #000000;
 $main-color: lightgray;
 $sub-color: gray;
+$dark-gray: #777777;
 
 /* Padding */
 $padding: 100px; // content-padding
