--- a/frontend/src/css/base/_reset.scss
+++ b/frontend/src/css/base/_reset.scss
@@ -132,3 +132,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+button{
+  outline: none;
+  border: none;
+  background-color: transparent;
+  &:hover, &:focus, &:active{
+    outline: none;
+  }
+}
