Code Review + Button to Link

--- a/frontend/src/css/base/_base.scss
+++ b/frontend/src/css/base/_base.scss
@@ -1,5 +1,8 @@
 /* Base CSS */
 
+/* import font */
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
+
 /* Color */
 $COLOR: #000000;
 $main-color: lightgray;
