--- a/frontend/src/css/components/_intro.scss
+++ b/frontend/src/css/components/_intro.scss
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;500;700&display=swap');
 
 .intro-root {
     height:100vh;
@@ -18,23 +17,23 @@
     margin-bottom: 2rem;
     width: 6rem;
     height: 6rem;
-    z-index: 1;
-    position: relative;
-    left:50%;
-    transform:translate(-50%,0);
     background-color: #ffffff;
     color: #000;
 }
 
 .intro-container {
     position : absolute;
-    top:50%;
-    left:50%;
-    transform:translate(-50%,-50%);
+    top:0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    z-index:1;
 }
 
 .text-area {
-    z-index:1;
     font-family: 'Noto Sans KR', sans-serif;
     text-align: center;
     color: #ffffff;
@@ -54,14 +53,15 @@
 
 #btn-go-service {
     margin-top:2rem;
-    position: relative;
-    left:50%;
     border-radius: 2rem;
     border-color: #ffffff;
-    transform:translate(-50%,0);
     font-family: 'Noto Sans KR', sans-serif;
     text-align: center;
     color: #ffffff;
     font-size: 1.3rem;
     font-weight: 500;
+}
+
+#btn-link:hover {
+    text-decoration: none;
 }
