--- a/frontend/src/css/Main.scss
+++ b/frontend/src/css/Main.scss
@@ -1,6 +1,5 @@
 @import './base';
-@import './components/placeselector';
-
+@import './components/searchbar';
 #map {
 	position: absolute;
 	z-index: 1;
