mixin : font-default

--- a/frontend/src/css/base/_mixin.scss
+++ b/frontend/src/css/base/_mixin.scss
@@ -9,3 +9,29 @@
     @content;
   }
 }
+
+@mixin font-default($weight:"Light", $size:1rem) {
+  font-family: "Noto Sans KR", sans-serif;
+  font-size: $size;
+  @if $weight == "Thin" {
+    font-weight: 100;
+  }
+  @else if $weight == "Light" {
+    font-weight: 300;
+  }
+  @else if $weight == "Regular" {
+    font-weight: 400;
+  }
+  @else if $weight == "Medium" {
+    font-weight: 500;
+  }
+  @else if $weight == "Bold" {
+    font-weight: 700;
+  }
+  @else if $weight == "Black" {
+    font-weight: 900;
+  }
+  @else {
+    font-weight: 300; // default weight
+  }
+}
