--- a/frontend/src/css/components/_signin.scss
+++ b/frontend/src/css/components/_signin.scss
@@ -37,6 +37,15 @@
 			color: darken(gray,20%);
 			font-weight: 700;
 		}
+		.register-title{
+			font-size: 1.5rem;
+			color: black;
+			font-weight: 700;
+		}
+		.stepper{
+			width : 75%;
+		}
+
 	}
 }
 .MuiOutlinedInput-root.Mui-focused .MuiOutlinedInput-notchedOutline {
