--- a/frontend/src/css/base/_base.scss
+++ b/frontend/src/css/base/_base.scss
@@ -5,9 +5,10 @@
 
 /* Color */
 $COLOR: #000000;
-$main-color: lightgray;
+$main-color: white;
 $sub-color: gray;
 $dark-gray: #777777;
+$light-gray: lightgray;
 
 /* Padding */
 $padding: 100px; // content-padding
