--- a/frontend/src/css/components/_main.scss
+++ b/frontend/src/css/components/_main.scss
@@ -24,9 +24,25 @@
 		height: 0;
 	}
     display: flex;
+	flex-direction: column;
     position: absolute;
     top: 0;
     left: 0;
     z-index: 900;
-    justify-content: center;
+    align-items: center;
+}
+
+.search-con{
+	margin-bottom: auto;
+	width: 100%;
+	@include mobile {
+		position: absolute;
+		top: calc(100vh - 17rem);
+		left: 0;
+		width: 100vw;
+		overflow: hidden;
+	}
+	display: flex;
+	flex-direction: column;
+	overflow-y: scroll;
 }
