--- a/frontend/src/css/components/_placeinfo.scss
+++ b/frontend/src/css/components/_placeinfo.scss
@@ -1,4 +1,10 @@
 .place-component{
+	@include mobile {
+		margin:0;
+		width: calc(100% - 2rem);
+		border-radius: 0;
+		height: auto;
+	}
     margin: 1rem;
 	padding: 1rem;
 	border-radius: 1rem;
