add review : not done

--- a/frontend/src/css/Main.scss
+++ b/frontend/src/css/Main.scss
@@ -7,5 +7,6 @@
 @import './base/reset';
 
 // components scss
+@import './components/sidebar';
 @import './components/searchbar';
 @import './components/main';
