--- a/frontend/src/css/components/_main.scss
+++ b/frontend/src/css/components/_main.scss
@@ -11,7 +11,7 @@
 	}
 }
 
-.side-bar {
+.place-side-bar {
     background-color: $main-color;
     box-shadow: 0.01rem 0 1rem #000;
     @include desktop {
