--- a/frontend/src/css/Layout.scss
+++ b/frontend/src/css/Layout.scss
@@ -12,7 +12,7 @@
 
 /* header */
 .header {
-    width: calc(100% - 2 * #{$padding});
+    width: 100%;
     background-color: $main-color;
     color: black;
     display: flex;
@@ -49,7 +49,7 @@
       width: 60%;
       flex : 1 1 auto;
       justify-content: space-around;
-      span{
+      div{
           padding: 10px;
           border-bottom: 1px solid transparent;
           &:hover{
