add modify, review modal

--- a/frontend/src/css/Introduction.scss
+++ b/frontend/src/css/Introduction.scss
@@ -5,6 +5,7 @@
 @import './base/materialUI';
 @import './base/mixin';
 @import './base/reset';
+@import './base/common';
 
 // components scss
 @import './components/_intro';
