reviewModal add star

--- a/frontend/src/css/base/_common.scss
+++ b/frontend/src/css/base/_common.scss
@@ -33,6 +33,9 @@
 		display: flex;
 		flex-direction: column;
 		margin: 1rem 0;
+		.modal-card{
+			margin-bottom: 1rem;
+		}
 		.modal-card-title{
 			font-weight: 600;
 			margin-bottom: 0.5rem;
