--- a/frontend/src/css/components/_main.scss
+++ b/frontend/src/css/components/_main.scss
@@ -19,9 +19,11 @@
 		height: calc(100vh - 5rem);
 	}
 	@include mobile {
+		/*
         left: 0;
 		width: 0;
 		height: 0;
+		*/
 	}
     display: flex;
 	flex-direction: column;
