second grid 만들어둠
일단 grid 만 만들어뒀음

--- a/frontend/src/css/components/_signin.scss
+++ b/frontend/src/css/components/_signin.scss
@@ -107,6 +107,9 @@
 	justify-content: flex-start;
 	height: 50vh;
 }
+.stepfirst-grid {
+	border: 1px solid gray;
+}
 .stepfinal-grid {
 	flex-direction: column;
 	align-items: center;
@@ -128,6 +131,12 @@
 }
 .register-subhead {
 	font-weight: bold !important;
+}
+.grid-left {
+	display: flex;
+	background-color: gray;
+	justify-content: center;
+	align-items: center;
 }
 .final-content {
 	white-space: pre-wrap;
