--- a/frontend/src/css/components/_signin.scss
+++ b/frontend/src/css/components/_signin.scss
@@ -105,16 +105,20 @@
 }
 .stepzero-grid {
 	justify-content: flex-start;
-	height: 50vh;
+	overflow: auto;
+	scrollbar-width: none;
 }
 .stepfirst-grid {
 	border: 1px solid gray;
+	overflow: auto;
+	scrollbar-width: none;
 }
 .stepfinal-grid {
 	flex-direction: column;
 	align-items: center;
 	justify-content: flex-start;
-	height: 50vh;
+	flex-wrap: nowrap !important;
+	overflow: auto;
 	.mail-icon {
 		display:none;
 	}
@@ -129,6 +133,7 @@
 		box-shadow: 5px 5px 5px #D9D9D9;
 	}
 }
+.stepzero-grid::-webkit-scrollbar .stepfirst-grid::-webkit-scrollbar .stepfinal-grid::-webkit-scrollbar{ display:none; }
 .register-subhead {
 	font-weight: bold !important;
 }
