--- a/frontend/src/css/components/_placeinfo.scss
+++ b/frontend/src/css/components/_placeinfo.scss
@@ -1,12 +1,6 @@
 @import '../base';
 
 .place-component{
-	@include mobile {
-		margin:0;
-		width: calc(100% - 2rem);
-		border-radius: 0;
-		height: auto;
-	}
     margin: 1rem;
 	padding: 1rem;
 	border-radius: 1rem;
@@ -18,17 +12,16 @@
 		box-shadow: 0 0 0.8rem gray;
 		border-color: $sub-color;
 	}
-
 	@include mobile {
-		position: absolute;
-		bottom: 0;
-		z-index: 10;
-		&>div{
-			order: 1;
-		}
+		width: 100%;
+		flex-shrink: 0;
+		border-radius: 0;
+		margin: 0;
+		height: auto;
 	}
 
 	.place-arrow{
+		order: 2; // 끝으로 보내기
 		display: flex;
 		align-items: center;
 		justify-content: center;
@@ -37,7 +30,8 @@
 			width: 100%;
 		}
 		@include mobile{
-			order: 3; // 끝으로 보내기
+			order: 0;
+			transform: rotate(180deg);
 		}
 	}
 	.place-header{
