--- a/frontend/src/css/components/_searchbar.scss
+++ b/frontend/src/css/components/_searchbar.scss
@@ -10,12 +10,10 @@
 
   }
   @include mobile {
-    position: absolute;
-    top: 3vw;
-    left: calc(3vw - 4px);
     z-index: 990;
     width: 94vw;
     height: 3rem;
+    margin-top: 1rem;
   }
 }
 
