--- a/frontend/src/css/Login.scss
+++ b/frontend/src/css/Login.scss
@@ -7,5 +7,5 @@
 @import './base/reset';
 
 // components scss
-@import './components/_signin';
-@import './components/modall';
+@import './components/signin';
+@import './components/register';
