--- a/frontend/src/css/components/_register.scss
+++ b/frontend/src/css/components/_register.scss
@@ -2,57 +2,48 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	width: 80vw;
-	margin:17vh auto;
+	flex-wrap: nowrap;
+	width: 50vw;
+	height: 90vh;
+	margin:5vh auto;
 
-	&>div{
-		width: 100%;
-		height: 100%;
+	.register-paper{
+		width:100%;
+		height:100%;
+		padding: 1rem 3rem 2rem 3rem;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
 	}
 	.register-title{
 		font-size: 1.5rem;
 		color: black;
 		font-weight: 700;
+		text-align: center;
 	}
-}
-.step-grid{
-	height: 70vh;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	flex-wrap: nowrap;
+	.register-content{
+		height:100%;
+		display: flex;
+		flex-direction: column;
+		justify-content: flex-start;
+		align-items: center;
+	}
+	.register-btngroup{
+		justify-content: center;
+		padding-top: 1rem;
+	}
+	.register-btn{
+		width: 6rem;
+	}
 }
 .stepper{
 	width: 100%;
 	padding: 0.5rem 0;
 }
-.register-btngroup{
-	justify-content: center;
-	padding-top: 1rem;
-}
-.register-btn{
-	width: 6rem;
-}
-
-@include desktop{
-	.stepper{
-		width: 80%;
-		padding: 1rem 0;
-	}
-	.register-btn{
-		width: 7rem;
-	}
-}
-.stepzero-grid {
+.step-grid{
 	justify-content: flex-start;
-	overflow: auto;
-	scrollbar-width: none;
-	-ms-overflow-style:none;
-	
-	@include desktop {
-		padding: 0 1.5rem;
-		height: 55vh;
-	}
+	height: 100%;
+	width: 100%;
 }
 .stepfirst-grid {
 	border: 1px solid gray;
@@ -81,27 +72,12 @@
 		margin-bottom: 1rem;
 		box-shadow: 5px 5px 5px #D9D9D9;
 	}
-
-	@include desktop {
-		padding: 0 1.5rem;
-		height: 55vh;
-		.mail-icon {
-			display: inline;
-			font-size: 7rem;
-		}
-		.stepfinal-head {
-			font-size: 1.3rem;
-			font-weight: 550;
-			margin-bottom: 1rem;
-		}
-		.mail-img {
-			display: inline;
-		}
-	}
 }
+
 .stepzero-grid::-webkit-scrollbar, .stepfirst-grid::-webkit-scrollbar, .stepfinal-grid::-webkit-scrollbar { display:none; }
 .register-subhead {
 	font-weight: bold !important;
+	margin-bottom: 5px !important;
 }
 .grid-left {
 	display: flex;
@@ -120,10 +96,6 @@
 	padding: 0.5rem 0;
 	margin-top: 1rem;
 
-	@include desktop {
-		padding: 1rem 0.5rem;
-		width: 80%;
-	}
 }
 .agree-content {
 	max-height: 4rem;
@@ -131,9 +103,6 @@
 	overflow: auto;
 	padding: 0.9rem;
 
-	@include desktop {
-		max-height: 7rem;
-	}
 }
 .radio-content {
 	font-size: 0.9rem;
