--- a/frontend/src/css/components/_searchbar.scss
+++ b/frontend/src/css/components/_searchbar.scss
@@ -64,6 +64,13 @@
   }
 }
 
+.search_result{
+  z-index: 100;
+  padding: 10px;
+  background-color: white;
+  border: 1px solid;
+}
+
 .new_place_modal .search_results {
   overflow: scroll;
 }
