--- a/frontend/src/css/components/_register.scss
+++ b/frontend/src/css/components/_register.scss
@@ -42,25 +42,50 @@
 }
 .step-grid{
 	justify-content: flex-start;
-	height: 100%;
+	height: 50vh;
 	width: 100%;
 }
-.stepfirst-grid {
-	border: 1px solid gray;
-	overflow: auto;
-	scrollbar-width: none;
-	-ms-overflow-style:none;
+.agree-grid {
+	height: 50%;
+	.agree-content {
+		max-height: 60%;
+		font-size: 0.9rem;
+		overflow: auto;
+		padding: 0.9rem;
+	
+	}
+}
+.stepfirst-grid-con{
+	height: 95%;
+	.stepfirst-grid {
+		height: 20%;
+		display:flex;
+		flex-direction: row;
+	}
+
+	.grid-left {
+		min-width: 30%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		background-color: gray;
+	}
+	.grid-right {
+		width: 70%;
+		display: flex;
+		align-items: center;
+		margin-left: 5px;
+
+		.MuiOutlinedInput-input{
+			padding: 5px !important;
+		}
+	}
 }
 .stepfinal-grid {
-	flex-direction: column;
-	align-items: center;
-	justify-content: flex-start;
-	flex-wrap: nowrap !important;
-	overflow: auto;
-	scrollbar-width: none;
-	-ms-overflow-style:none;
-	.mail-icon {
-		display:none;
+	.stepfinal-head-con {
+		display: flex;
+		flex-flow: column;
+		align-items: center;
 	}
 	.stepfinal-head {
 		font-size: 1.1rem;
@@ -68,22 +93,16 @@
 		margin-bottom: 1rem;
 	}
 	.mail-img {
-		display: none;
 		margin-bottom: 1rem;
 		box-shadow: 5px 5px 5px #D9D9D9;
 	}
 }
 
 .stepzero-grid::-webkit-scrollbar, .stepfirst-grid::-webkit-scrollbar, .stepfinal-grid::-webkit-scrollbar { display:none; }
+
 .register-subhead {
 	font-weight: bold !important;
 	margin-bottom: 5px !important;
-}
-.grid-left {
-	display: flex;
-	background-color: gray;
-	justify-content: center;
-	align-items: center;
 }
 .final-content {
 	white-space: pre-wrap;
@@ -95,13 +114,6 @@
 	background-color: lighten(gray, 30%) !important;
 	padding: 0.5rem 0;
 	margin-top: 1rem;
-
-}
-.agree-content {
-	max-height: 4rem;
-	font-size: 0.9rem;
-	overflow: auto;
-	padding: 0.9rem;
 
 }
 .radio-content {
