--- a/frontend/src/css/PlaceInfo.scss
+++ b/frontend/src/css/PlaceInfo.scss
@@ -11,6 +11,7 @@
 @import './components/sidebar';
 @import './components/searchbar';
 @import './components/main';
+@import './components/placefilter';
 @import './components/placeinfo';
 @import './components/reviewmodal';
 
