--- a/frontend/src/css/base/_base.scss
+++ b/frontend/src/css/base/_base.scss
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap');
 
 /* Color */
+// black, white
 $COLOR: #000000;
 $main-color: white;
 $sub-color: gray;
