--- a/frontend/src/css/components/_reviewmodal.scss
+++ b/frontend/src/css/components/_reviewmodal.scss
@@ -1,7 +1,7 @@
 .review-shop-name{
 	border-radius: 1rem;
-	background-color: gray;
-    color: white;
+	background-color: $subsub-color;
+    color: $sub-color;
     padding: 0.4rem 0.5rem;
     font-size: 0.8rem;
 	margin-top: 0.5rem;
