--- a/frontend/src/css/base/_common.scss
+++ b/frontend/src/css/base/_common.scss
@@ -26,7 +26,7 @@
 		min-width: auto;
 		height: 30px;
 		border-radius: 1rem;
-		background-color: $light-gray;
+		background-color: $subsub-light-color;
 	}
 	.modal-card-con{
 		width: 80%;
