--- a/frontend/src/css/components/_intro.scss
+++ b/frontend/src/css/components/_intro.scss
@@ -17,7 +17,7 @@
     width: 6rem;
     height: 6rem;
     background-color: $main-color;
-    color: #000;
+    color: $text-color;
     animation: fadeIn 0.8s linear 0s both;
 }
 
@@ -45,6 +45,10 @@
         p {
             @include font-default(300, 1.5rem);
             line-height : 2.5rem;
+            strong {
+                @include font-default(500, 1.5rem);
+                color: $main-color;
+            }
         }
         animation: fadeIn 0.8s linear 0.8s both;
     }
@@ -52,10 +56,11 @@
 
 #btn-go-service {
     margin-top:2rem;
-    border: 3px solid #80CBC4;
+    border: 3px solid $main-color;
     border-radius: 2rem;
     text-align: center;
-    color: $main-color;
+    padding: 0.5rem 2rem;
+    color: $sub-color;
     @include font-default(500, 1.3rem);
     animation: fadeIn 0.8s linear 1.6s both;
     transition: all 0.5s cubic-bezier(0.77, 0, 0.175, 1);
@@ -79,7 +84,7 @@
         left: 0;
     }
     &:hover {
-        color: #000;
+        color: $text-color;;
         transition-delay: .5s;
         &:before {
             transition-delay: 0s;
