--- a/frontend/src/css/components/_reg-suc.scss
+++ b/frontend/src/css/components/_reg-suc.scss
@@ -6,7 +6,7 @@
 		font-weight: bold;
 		margin-top: 2.5rem;
 		margin-left: 2.5rem;
-		border-left: 5px solid black; // color
+		border-left: 5px solid $text-color; // color
 		padding-left: 1rem;
 	}
 	.suc-body {
@@ -39,7 +39,7 @@
 		.suc-box {
 			width: 450px;
 			display: flex;
-			border: 1px solid gray; // color
+			border: 1px solid $subsub-color; // color
 			padding: 50px 60px;
 			overflow: auto;
 			@include mobile {
@@ -62,8 +62,8 @@
 			margin: 2.5rem 0;
 
 			.btn {
-				background-color: green; // color
-				color: white;
+				background-color: $correct-color; // color
+				color: $sub-color;
 				box-shadow: none;
 				padding: 8px 48px;
 				text-decoration: none;
