--- a/frontend/src/css/components/_register.scss
+++ b/frontend/src/css/components/_register.scss
@@ -17,7 +17,7 @@
 	}
 	.register-title{
 		font-size: 1.5rem;
-		color: black;
+		color: $text-color;
 		font-weight: 700;
 		text-align: center;
 	}
@@ -27,6 +27,9 @@
 		flex-direction: column;
 		justify-content: flex-start;
 		align-items: center;
+		.MuiStepIcon-root.MuiStepIcon-active {
+			color: $main-dark-color;
+		}
 	}
 	.register-btngroup{
 		justify-content: center;
@@ -34,11 +37,18 @@
 	}
 	.register-btn{
 		width: 6rem;
+		.MuiButton-root:hover {
+			color: $sub-color;
+			background-color: $main-dark-color;
+		}
 	}
 }
 .stepper{
 	width: 100%;
 	padding: 0.5rem 0;
+	.MuiStepIcon-root.MuiStepIcon-completed {
+		color: $main-color;
+	}
 }
 .step-grid{
 	justify-content: flex-start;
@@ -68,7 +78,7 @@
 		display: flex;
 		justify-content: center;
 		align-items: center;
-		background-color: gray;
+		background-color: $subsub-color;
 	}
 	.grid-right {
 		width: 70%;
@@ -94,7 +104,28 @@
 	}
 	.mail-img {
 		margin-bottom: 1rem;
-		box-shadow: 5px 5px 5px #D9D9D9;
+		box-shadow: 5px 5px 5px $subsub-light-color;
+	}
+	.stepfinal-ps {
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		width: 100%;
+		text-align: center;
+		padding: 2rem;
+		margin-top: 1rem;
+		background-color: $main-light-color;
+		.MuiTypography-body2 {
+			line-height: 2.5;
+			margin-bottom: 1.5rem;
+		}
+		.MuiButton-contained {
+			color: $sub-color;
+			background-color: $main-dark-color;
+			&:hover {
+				background-color: $main-deep-dark-color;
+			}
+		}
 	}
 }
 
@@ -108,14 +139,7 @@
 	white-space: pre-wrap;
 	text-align: center;
 }
-.stepfinal-ps {
-	width: 100%;
-	text-align: center;
-	background-color: lighten(gray, 30%) !important;
-	padding: 0.5rem 0;
-	margin-top: 1rem;
 
-}
 .radio-content {
 	font-size: 0.9rem;
 	width: 100%;
@@ -127,6 +151,9 @@
 .radio-group {
 	flex-direction: row !important;
 	margin-left: 1rem;
+	.MuiSvgIcon-fontSizeSmall {
+		color: $main-dark-color;
+	}
 }
 .MuiRadio-root {
 	padding: 4px !important;
